fixed some spacing

--- a/packages/react/src/Banner/Banner.module.css
+++ b/packages/react/src/Banner/Banner.module.css
@@ -193,6 +193,7 @@
   .BannerContainer {
     display: grid;
     grid-template-columns: auto auto;
+    column-gap: var(--base-size-6); 
   }
 
   :where(.Banner):not([data-dismissible])
